--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "joi": "^17.13.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.3.2",
-        "mongoose-slug-generator": "^1.0.4",
+        "mongoose-slug-updater": "^3.3.0",
         "multer": "^1.4.5-lts.1",
         "util.promisify": "^1.1.2"
     }
