--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "mongoose": "^8.3.2",
         "mongoose-slug-updater": "^3.3.0",
         "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.14",
+        "qs": "^6.12.2",
         "util.promisify": "^1.1.2"
     }
 }
