FIX: Add allowed origins

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ USER=buivi04062002@gmail.com
 PASSWORD=gyyl mypv cena fdvm
 PORT=3000
 MONGO_URL=mongodb+srv://buivi04062002:SOCngCl4MbSbH4XL@furniture-db.auruwxu.mongodb.net/FurnitureStore
+ALLOWED_ORIGINS=http://localhost:5173.http://localhost:4000
