--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PASSWORD=gyyl mypv cena fdvm
 PORT=3000
 # MONGO_URL=mongodb://localhost:27017/furniture_store
 MONGO_URL=mongodb+srv://buivi04062002:SOCngCl4MbSbH4XL@furniture-db.auruwxu.mongodb.net/FurnitureStore
-ALLOWED_ORIGINS=http://localhost:5173.http://localhost:4000.https://fixtures-store.onrender.com
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4000,https://fixtures-store.onrender.com
 VNP_TMPCODE=0NP1XRTC
 VNP_HASHSECRET=7WZW1IEMFHF0LEU52VXL3TN5ZULYAH36
 VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
